Fixes titles alignment in work section.

--- a/_sass/_work.scss
+++ b/_sass/_work.scss
@@ -15,6 +15,7 @@
     }
 
     @include respond-min($tablet-portrait) {
+      text-align: left;
       $offset: -6em;
       margin-left: $offset;
       margin-right: $offset;
